<resources>
    <string name="app_name">ESMemorandum</string>
    <string name="text_Event">事件</string>
    <string name="text_Time">时间</string>
    <string name="text_Date">日期</string>
    <string name="text_Location">地点</string>
    <string name="text_Start">开始</string>
    <string name="text_End">结束</string>
    <string name="text_Remarks">备注</string>
    <string name="text_Vibration">振动</string>
    <string name="text_Ring">响铃</string>
    <string name="label_SubActivity">添加事件</string>
    <string name="menu_Save">保存</string>
    <string name="menu_Reset">重置</string>
    <string name="menu_Search">查找</string>
    <string name="menu_Refresh">刷新</string>
    <string name="cmenu_Delete">删除</string>
    <string name="cmenu_Edit">编辑</string>
</resources>
